added three charts in statistics component

--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
-    "chart.js": "2.9.3",
-    "chartjs-plugin-datalabels": "0.7.0",
     "css-loader": "3.4.0",
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
@@ -25,6 +23,8 @@
     "node": "10"
   },
   "dependencies": {
+    "chart.js": "2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "flatpickr": "4.6.3",
     "he": "1.2.0",
     "moment": "2.24.0"
